--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,15 @@
   
     <title>Alexandre Abreu - 2019</title>
   </head>
-  <body class="container-fluid" id="mainApp">
+  <body class="row" id="mainApp">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="row">
-        <div class="col-12">
-            <div class="col-12 col-sm-4 d-inline-block" id="logo"></div>
-            <div class="col-12 col-sm-3 d-inline-block" id="clock"></div>
-            <div class="col-12 col-sm-4 d-inline-block" id="theme-switcher"></div>
-          </div>
-      <div class="col-12 my-2 mx-auto">
-        <div id="navigation"></div>
+    <div class="container-fluid">
+      <div class="row">
+          <div class="col-12 col-sm-4 d-inline-block" id="logo"></div>
+          <div class="col-12 col-sm-3 d-inline-block" id="clock"></div>
+          <div class="col-12 col-sm-4 d-inline-block" id="theme-switcher"></div>
+          <div class="col-12" id="navigation"></div>
       </div>
-      
     </div>
   </body>
 </html>
