Add contact required fields

--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,13 @@
   
     <title>Alexandre Abreu - 2019</title>
   </head>
-  <body class="row" id="mainApp">
+  <body class="container" id="mainApp">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container-fluid">
       <div class="row">
           <div class="col-12 col-sm-4 d-inline-block" id="logo"></div>
           <div class="col-12 col-sm-3 d-inline-block" id="clock"></div>
           <div class="col-12 col-sm-4 d-inline-block" id="theme-switcher"></div>
           <div class="col-12" id="navigation"></div>
       </div>
-    </div>
   </body>
 </html>
