Add initial i18n terms

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
       <div class="row">
           <div class="col-12 col-sm-4 d-inline-block" id="logo"></div>
-          <div class="col-12 col-sm-3 d-inline-block" id="clock"></div>
           <div class="col-12 col-sm-4 d-inline-block" id="theme-switcher"></div>
+          <div class="col-12 col-sm-4 d-inline-block" id="language-switcher"></div>
           <div class="col-12" id="navigation"></div>
       </div>
   </body>
