--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,11 @@
   <body class="container" id="mainApp">
     <noscript>You need to enable JavaScript to run this app.</noscript>
       <div class="row">
-          <div class="col-12 col-sm-4 d-inline-block" id="logo"></div>
-          <div class="col-12 col-sm-4 d-inline-block" id="theme-switcher"></div>
-          <div class="col-12 col-sm-4 d-inline-block" id="language-switcher"></div>
+          <div class="col-6 d-inline-block align-items-center" id="logo"></div>
+          <div class="col-3 d-inline-block align-items-center" id="language-switcher"></div>
+          <div class="col-3 d-inline-block align-items-center" id="theme-switcher"></div>
           <div class="col-12" id="navigation"></div>
       </div>
   </body>
+  <footer class="text-center fixed-bottom"><span>Made with ❤️ using React</span></footer>
 </html>
