Add dynamic variable to i18 translations

--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,5 @@
           <div class="col-12" id="navigation"></div>
       </div>
   </body>
-  <footer class="text-center fixed-bottom"><span>Made with ❤️ using React</span></footer>
+  <footer class="text-center"><span>Made with ❤️ using React</span></footer>
 </html>
