Add adjustments to nav
Add missing trans

Fix index page

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
   <body class="container" id="mainApp">
     <noscript>You need to enable JavaScript to run this app.</noscript>
       <div class="row">
-          <div class="col-6 d-inline-block align-items-center" id="logo"></div>
-          <div class="col-3 d-inline-block align-items-center" id="language-switcher"></div>
-          <div class="col-3 d-inline-block align-items-center" id="theme-switcher"></div>
+          <div class="col-5 d-inline-block align-items-center my-auto" id="logo"></div>
+          <div class="col-4 d-inline-block align-items-center my-auto" id="language-switcher"></div>
+          <div class="col-3 d-inline-block align-items-center my-auto" id="theme-switcher"></div>
           <div class="col-12" id="navigation"></div>
       </div>
   </body>
