Added social links
Added missing nav header menu translations

--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,12 @@
           <div class="col-12" id="navigation"></div>
       </div>
   </body>
-  <footer class="text-center"><span>Made with ❤️ using React</span></footer>
+  <footer class="text-center">
+    <ul class="social-networks square spin-icon">
+      <li><a target="_blank" href="https://www.facebook.com/Alexandreabreu46" class="text-decoration-none text-center icon-facebook"> Facebook </a></li>
+      <li><a target="_blank" href="https://www.linkedin.com/in/alexandreabreu46/" class="text-decoration-none text-center icon-linkedin"> Linkedin </a></li>
+      <li><a target="_blank" href="https://github.com/Alexandre46" class="text-decoration-none text-center icon-github"> Github </a></li>
+    </ul>
+    <span>Made with ❤️ using React</span>
+  </footer>
 </html>
