Fix footer margin

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,6 @@
       <li><a target="_blank" href="https://www.linkedin.com/in/alexandreabreu46/" class="text-decoration-none text-center icon-linkedin"> Linkedin </a></li>
       <li><a target="_blank" href="https://github.com/Alexandre46" class="text-decoration-none text-center icon-github"> Github </a></li>
     </ul>
-    <span>Made with ❤️ using React</span>
+    <span>Made with ❤️ using React </span> <b>© 2020 Alexandre Abreu </b>
   </footer>
 </html>
