--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,11 @@
   <body class="container" id="mainApp">
     <noscript>You need to enable JavaScript to run this app.</noscript>
       <div class="row">
-          <div class="col-5 d-inline-block align-items-center my-auto" id="logo"></div>
-          <div class="col-4 d-inline-block align-items-center my-auto" id="language-switcher"></div>
-          <div class="col-3 d-inline-block align-items-center my-auto" id="theme-switcher"></div>
-          <div class="col-12" id="navigation"></div>
+          <div class="col-5 col-md-2 d-inline-block align-items-center my-auto" id="logo"></div>
+          <div class="col-4 col-md-2 d-inline-block align-items-center my-auto" id="language-switcher"></div>
+          <div class="col-3 col-md-2 d-inline-block align-items-center my-auto" id="theme-switcher"></div>
+          <div class="col-12 col-md-6 d-inline-block align-items-center my-auto" id="header"></div>
+          <div class="col-12" id="content"></div>
       </div>
   </body>
   <footer class="text-center">
