--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-        <div class="col-12 col-md-6 collapse navbar-collapse show" id="header"></div>
+        <div class="col-12 col-md-6 navbar-collapse" id="header"></div>
         <div class="col-12" id="content"></div>
       </div>
       <footer class="text-center footer">
