--- a/public/index.html
+++ b/public/index.html
@@ -7,37 +7,71 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Personal site/blog from Alexandre Abreu - Portuguese developer"
+      content="Personal site/blog from Alexandre Abreu - Software developer"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+
     <title>Alexandre Abreu - Software Developer</title>
   </head>
-  <body id="mainApp" class="h-100">
-    <div class="container h-100">
-      <div class="h-100 row main">
-        <div class="col-3 col-md-2" id="logo"></div>
-        <div class="col-3 col-md-2" id="language-switcher"></div>
-        <div class="col-3 col-md-2" id="theme-switcher"></div>
-        <div class="col-3 d-block d-md-none">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#header" 
-            aria-controls="header" aria-expanded="true" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+  <body id="mainApp">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="row mx-md-5">
+            <div class="col-6 col-md-2 d-none d-md-block" id="logo"></div>
+            <div class="col-6 d-block d-md-none">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#header"
+                aria-controls="header"
+                aria-expanded="true"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div class="col-12 col-md-10 navbar-collapse" id="header"></div>
+          </div>
+          <div class="row">
+            <div class="col-12" id="content"></div>
+          </div>
         </div>
-        <div class="col-12 col-md-6 navbar-collapse" id="header"></div>
-        <div class="col-12" id="content"></div>
       </div>
       <footer class="text-center footer">
         <ul class="social-networks square spin-icon">
-          <li><a target="_blank" href="https://www.facebook.com/Alexandreabreu46" class="text-decoration-none text-center icon-facebook"> Facebook </a></li>
-          <li><a target="_blank" href="https://www.linkedin.com/in/alexandreabreu46/" class="text-decoration-none text-center icon-linkedin"> Linkedin </a></li>
-          <li><a target="_blank" href="https://github.com/Alexandre46" class="text-decoration-none text-center icon-github"> Github </a></li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.facebook.com/Alexandreabreu46"
+              class="text-decoration-none text-center icon-facebook"
+            >
+              Facebook
+            </a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/alexandreabreu46/"
+              class="text-decoration-none text-center icon-linkedin"
+            >
+              Linkedin
+            </a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://github.com/Alexandre46"
+              class="text-decoration-none text-center icon-github"
+            >
+              Github
+            </a>
+          </li>
         </ul>
         <span>Made with ❤️ using React </span> <b>© 2020 Alexandre Abreu </b>
       </footer>
     </div>
   </body>
-  
 </html>
