--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="row mx-md-5">
+          <div class="row">
             <div class="col-6 col-md-2 d-none d-md-block" id="logo"></div>
             <div class="col-6 d-block d-md-none">
               <button
